methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:19: error: type mismatch;
 found   : Unit
 required: Boolean
while (!estSurBiscuit()){
^