methods.slug.SlugTracking.scala.code
  def isFacingTrail():Boolean= {
    if (estFaceMur()){
      return false
    }
    else{
    avance()
    if (getCouleurSol()==Color.green){
      recule()
      return true
    }
    else{
      recule()
      return false
    }
    }
  

while (!estSurBiscuit()){
  if(isFacingTrail()){
    avance()
  }
  else{
    gauche()
  }
}
  }